--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,48 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.card_scanning_list_logo_tit{
+  padding:0 50rpx;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.card_scanning_list_logo_box{
+  width: 100%;
+  height: auto;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.card_scanning_logo{
+  padding:2px;
+  border:1px solid #e8e5e5;
+  /* display: inline-block; */
+  width:60px;
+  height:60px;
+  float: left;
 }
-
-.usermotto {
-  margin-top: 200px;
+.card_scanning_logo image{
+  width: 100%;
+  height: 100%;
+}
+.card_scanning_logo_add{
+  /* display: inline-block; */
+  float: left;
+  width:118rpx;
+  height:100rpx;
+  text-align: center;
+  line-height: 100rpx;
+  border:1px solid transparent;
+  padding:4rpx;
+}
+.card_scanning_logo_add i{
+  font-size:80rpx;
+  color: #696666;
+}
+.card_scanning_list_logo{
+  overflow: hidden;
+}
+.card_scanning_list_logo_box{
+  padding:20rpx 50rpx 0;
+}
+.card_editor_tit_box{
+  text-align:center;
+  line-height:40rpx;
+  padding:20rpx 40rpx;
+}
+.card_editor_tit_box{
+ line-height:2.3;
 }
